feat: basic authentication added by next-auth v5
